--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_btc"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_btc_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".AppSettingsActivity"
+            android:name=".presentation.CoinDetailInfoActivity"
             android:exported="false" />
-        <activity android:name=".CoinDetailActivity" />
         <activity
-            android:name=".CoinPriceListActivity"
+            android:name=".presentation.AppSettingsActivity"
+            android:exported="false" />
+        <activity android:name=".presentation.CoinDetailFragment" />
+        <activity
+            android:name=".presentation.CoinPriceListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
